--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,28 @@
+# Backend
 HELP.md
 target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+# Environment
+.env
+*.env
+application-local.properties
 
-### IntelliJ IDEA ###
-.idea
+# IDE - IntelliJ
+.idea/
 *.iws
 *.iml
 *.ipr
 
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
+# Logs
+*.log
 
-### VS Code ###
-.vscode/
+# Frontend (vanilla JS)
+frontend/dist
+frontend/node_modules
+
+# OS
+.DS_Store
+Thumbs.db
