--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -27,3 +27,8 @@ logging.level.com.habittracker=DEBUG
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+# JPA logging specifico
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+logging.level.org.springframework.transaction=TRACE
+logging.level.org.springframework.orm.jpa=DEBUG
