--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,4 +18,5 @@ services:
     env_file:
       - .env
     restart: unless-stopped
-
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
