--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,8 @@
+# Application
 spring.application.name=habit-tracker
+server.port=8082
 
+# Database
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -9,27 +12,48 @@ spring.jpa.show-sql=true
 # Google OAuth2 Configuration
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-spring.security.oauth2.client.registration.google.redirect-uri=https://haby.casacocchy.duckdns.org/login/oauth2/code/google
+spring.security.oauth2.client.registration.google.redirect-uri=${OAUTH2_REDIRECT_URI:https://haby.casacocchy.duckdns.org/login/oauth2/code/google}
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
-# Provider configuration (opzionale ma consigliato)
+# OAuth2 Provider Configuration
 spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
 spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v4/token
 spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
+# Application URLs
+app.frontend.url=${FRONTEND_URL:http://localhost:5500}
+app.domain.url=${DOMAIN_URL:https://haby.casacocchy.duckdns.org}
 
+# Session and Cookie Configuration
+server.servlet.session.cookie.same-site=Lax
+server.servlet.session.cookie.secure=true
+server.servlet.session.timeout=30m
 
-server.port=8082
+# CORS Configuration
+spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5500,https://haby.casacocchy.duckdns.org}
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.web.cors.allowed-headers=*
+spring.web.cors.allow-credentials=true
+spring.web.cors.max-age=3600
 
-# Logging
+# Logging Configuration
+logging.level.root=INFO
 logging.level.com.habittracker=DEBUG
-spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-# JPA logging specifico
+
+# JPA Specific Logging
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 logging.level.org.springframework.transaction=TRACE
 logging.level.org.springframework.orm.jpa=DEBUG
+
+# Server Configuration
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
