--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -23,8 +23,8 @@ spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleap
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
 
 # Application URLs
-app.frontend.url=${FRONTEND_URL:http://localhost:5500}
-app.domain.url=${DOMAIN_URL:https://haby.casacocchy.duckdns.org}
+app.frontend.url=http://127.0.0.1:5500
+app.domain.url=https://haby.casacocchy.duckdns.org
 
 # Session and Cookie Configuration
 server.servlet.session.cookie.same-site=Lax
