--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -8,52 +8,55 @@ spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
 # Google OAuth2 Configuration
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
-spring.security.oauth2.client.registration.google.redirect-uri=${OAUTH2_REDIRECT_URI:https://haby.casacocchy.duckdns.org/login/oauth2/code/google}
+spring.security.oauth2.client.registration.google.redirect-uri=https://haby.casacocchy.duckdns.org/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
-# OAuth2 Provider Configuration
-spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
-spring.security.oauth2.client.provider.google.token-uri=https://www.googleapis.com/oauth2/v4/token
-spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
-spring.security.oauth2.client.provider.google.user-name-attribute=sub
-
-# Application URLs
-app.frontend.url=http://127.0.0.1:5500
-app.domain.url=https://haby.casacocchy.duckdns.org
+# Frontend Configuration
+app.frontend.url=http://127.0.0.1:5500/frontend/index.html
+app.allowed-origins=http://127.0.0.1:5500,http://localhost:5500,https://haby.casacocchy.duckdns.org
 
 # Session and Cookie Configuration
-server.servlet.session.cookie.same-site=Lax
+server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
 server.servlet.session.timeout=30m
+server.servlet.session.cookie.domain=.casacocchy.duckdns.org
+server.servlet.session.cookie.path=/
 
-# CORS Configuration
-spring.web.cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5500,https://haby.casacocchy.duckdns.org}
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=*
-spring.web.cors.allow-credentials=true
-spring.web.cors.max-age=3600
+# Server Security Headers
+server.servlet.session.cookie.http-only=true
+security.require-ssl=true
+server.forward-headers-strategy=native
 
-# Logging Configuration
+# Logging
 logging.level.root=INFO
 logging.level.com.habittracker=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.oauth2=DEBUG
+
+# SQL Logging
+spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# JPA Specific Logging
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.use_sql_comments=true
-logging.level.org.springframework.transaction=TRACE
-logging.level.org.springframework.orm.jpa=DEBUG
-
-# Server Configuration
+# Error Handling
 server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=never
+server.error.whitelabel.enabled=false
+
+# Performance Tuning
+spring.datasource.hikari.maximum-pool-size=10
+spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+
+# Compression
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/xml,text/plain,text/css,application/javascript,application/json
+server.compression.min-response-size=1024
