--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# Application
+# Application Base
 spring.application.name=habit-tracker
 server.port=8082
 
@@ -10,53 +10,34 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
 
-# Google OAuth2 Configuration
+# Google OAuth2
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.redirect-uri=https://haby.casacocchy.duckdns.org/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
-# Frontend Configuration
+# Frontend URL
 app.frontend.url=http://127.0.0.1:5500/frontend/index.html
-app.allowed-origins=http://127.0.0.1:5500,http://localhost:5500,https://haby.casacocchy.duckdns.org
 
-# Session and Cookie Configuration
+# Session and Cookie
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
-server.servlet.session.timeout=30m
-server.servlet.session.cookie.domain=.casacocchy.duckdns.org
-server.servlet.session.cookie.path=/
-
-# Server Security Headers
 server.servlet.session.cookie.http-only=true
+
+# Server Security
 security.require-ssl=true
 server.forward-headers-strategy=native
 
-# Logging
-logging.level.root=INFO
+# Logging Essential
 logging.level.com.habittracker=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.oauth2=DEBUG
-
-# SQL Logging
-spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Error Handling
 server.error.include-message=always
-server.error.include-binding-errors=always
-server.error.include-stacktrace=never
 server.error.whitelabel.enabled=false
 
-# Performance Tuning
+# Connection Pool
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=300000
-
-# Compression
-server.compression.enabled=true
-server.compression.mime-types=text/html,text/xml,text/plain,text/css,application/javascript,application/json
-server.compression.min-response-size=1024
