Fixing a lot of bugs

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+spring.jpa.properties.hibernate.format_sql=true
 
 # Google OAuth2
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
@@ -17,27 +18,45 @@ spring.security.oauth2.client.registration.google.redirect-uri=https://haby.casa
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
-# Frontend URL
+# Frontend Configuration
 app.frontend.url=http://127.0.0.1:5500/frontend/index.html
 
-# Session and Cookie
+# Session and Cookie Configuration
+server.servlet.session.timeout=24h
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=true
+server.servlet.session.cookie.path=/
+spring.session.jdbc.initialize-schema=always
 
-# Server Security
+# Security Configuration
 security.require-ssl=true
 server.forward-headers-strategy=native
+spring.security.remember-me.key=uniqueAndSecureKey
+spring.security.remember-me.token-validity-seconds=86400
 
-# Logging Essential
+# Logging Configuration
+logging.level.root=INFO
 logging.level.com.habittracker=DEBUG
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Error Handling
 server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-stacktrace=never
 server.error.whitelabel.enabled=false
 
-# Connection Pool
+# Connection Pool Configuration
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
+spring.datasource.hikari.idle-timeout=300000
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.max-lifetime=1200000
+
+# Server Compression
+server.compression.enabled=true
+server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
+server.compression.min-response-size=1024
