--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,9 +7,7 @@ spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
-spring.jpa.properties.hibernate.format_sql=true
 
 # Google OAuth2
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
@@ -36,12 +34,12 @@ spring.security.remember-me.key=uniqueAndSecureKey
 spring.security.remember-me.token-validity-seconds=86400
 
 # Logging Configuration
-logging.level.root=INFO
-logging.level.com.habittracker=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.root=WARN
+logging.level.com.habittracker=INFO
+#logging.level.org.springframework.security=INFO
+#logging.level.org.springframework.web=WARN
+#logging.level.org.hibernate.SQL=WARN
+#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 
 # Error Handling
 server.error.include-message=always
