--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
 # Frontend Configuration
-app.frontend.url=http://127.0.0.1:5500/frontend/index.html
+app.frontend.url=http://habit.simmacococchiaro.com.s3-website.eu-central-1.amazonaws.com
 
 # Session and Cookie Configuration
 server.servlet.session.timeout=24h
