--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -58,3 +58,9 @@ spring.datasource.hikari.max-lifetime=1200000
 server.compression.enabled=true
 server.compression.mime-types=application/json,application/xml,text/html,text/xml,text/plain
 server.compression.min-response-size=1024
+
+# Aggiungi configurazione CORS esplicita
+spring.mvc.cors.allowed-origins=https://habit.simmacococchiaro.com
+spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+spring.mvc.cors.allowed-headers=*
+spring.mvc.cors.allow-credentials=true
