--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-# docker-compose.yml
 name: habit-tracker
 
 services:
@@ -18,9 +17,9 @@ services:
       - SPRING_DATASOURCE_URL=${DB_URL}
       - SPRING_DATASOURCE_USERNAME=${DB_USERNAME}
       - SPRING_DATASOURCE_PASSWORD=${DB_PASSWORD}
-      - APP_FRONTEND_URL=${FRONTEND_URL}
-      - APP_DOMAIN_URL=${DOMAIN_URL}
-      - OAUTH2_REDIRECT_URI=${OAUTH2_REDIRECT_URI}
+      - APP_FRONTEND_URL=${FRONTEND_URL}               # URL del frontend
+      - APP_DOMAIN_URL=${DOMAIN_URL}                   # Dominio completo
+      - OAUTH2_REDIRECT_URI=${OAUTH2_REDIRECT_URI}     # Redirect URI per Google
       - SERVER_SERVLET_SESSION_COOKIE_SECURE=true
       - SERVER_SERVLET_SESSION_COOKIE_SAME_SITE=none
       - SPRING_SECURITY_REMEMBER_ME_KEY=${REMEMBER_ME_KEY}
@@ -39,6 +38,18 @@ services:
       timeout: 10s
       retries: 3
       start_period: 40s
+
+  habit-tracker-frontend:
+    image: nginx:alpine
+    container_name: habit-tracker-frontend
+    ports:
+      - "8083:80"  # Espone il frontend sulla porta 8083
+    volumes:
+      - ./frontend:/usr/share/nginx/html  # Monta i file HTML, CSS e JS
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf  # Monta la configurazione Nginx
+    networks:
+      - habit-network
+    restart: unless-stopped
 
 networks:
   habit-network:
