changed frontend domain

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.security.oauth2.client.registration.google.scope=openid,profile,email
 spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
 
 # Frontend Configuration
-app.frontend.url=https://habit.simmacococchiaro.com
+app.frontend.url=https://habit.casacocchy.duckdns.org
 
 # Session and Cookie Configuration
 server.servlet.session.timeout=24h
@@ -60,7 +60,7 @@ server.compression.mime-types=application/json,application/xml,text/html,text/xm
 server.compression.min-response-size=1024
 
 # Aggiungi configurazione CORS esplicita
-spring.mvc.cors.allowed-origins=https://habit.simmacococchiaro.com,https://haby.casacocchy.duckdns.org,https://accounts.google.com
+spring.mvc.cors.allowed-origins=https://habit.casacocchy.duckdns.org,https://haby.casacocchy.duckdns.org,https://accounts.google.com
 spring.mvc.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
 spring.mvc.cors.allowed-headers=*
 spring.mvc.cors.allow-credentials=true
