--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.security.oauth2.client.registration.google.authorization-grant-type=autho
 app.frontend.url=https://habit.casacocchy.duckdns.org
 
 # Session and Cookie Configuration
-server.servlet.session.timeout=24h
+server.servlet.session.timeout=30d
 server.servlet.session.cookie.same-site=none
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.http-only=true
@@ -31,7 +31,7 @@ spring.session.jdbc.initialize-schema=always
 security.require-ssl=true
 server.forward-headers-strategy=native
 spring.security.remember-me.key=uniqueAndSecureKey
-spring.security.remember-me.token-validity-seconds=86400
+spring.security.remember-me.token-validity-seconds=2592000
 
 # Logging Configuration
 logging.level.root=WARN
